syntax = "proto3";

package accountInformation;

option go_package = "/account_informationpb";

service AccountInformationService {
    rpc WelcomeMessage (WelcomeMessageRequest) returns (WelcomeMessageRespone) ;

    rpc FetchUserInformation (FetchUserInformationRequest) returns (FetchUserInformationRespone);

    rpc EditUserInformation (EditUserInformationRequest) returns (EditUserInformationRespone);
}


message AccountInformation {
    string name = 1;
    int32 birthday = 2;
    string sex = 3;
    string phone_number = 4;
    string avatar = 5;
    string wallpaper = 6;
}

message FetchAccountInformation {
    string name = 1;
    int32 birthday = 2;
    string sex = 3;
    string phone_number = 4;
    string email = 5;
    string avatar = 6;
    string wallpaper = 7;
}

message WelcomeMessageRequest {
}
message WelcomeMessageRespone {
    string welcome_message = 1;
}


message FetchUserInformationRequest {
}
message FetchUserInformationRespone {
    FetchAccountInformation fetch_account_information = 1; 
}


message EditUserInformationRequest {
    AccountInformation account_information = 1; 
}
message EditUserInformationRespone {
}

